--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.1",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
@@ -32,7 +34,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwind": "^4.0.0",
-    "tailwindcss": "^4.1.1",
+    "tailwindcss": "^4.1.5",
     "vite": "^6.2.0",
     "vite-plugin-eslint": "^1.8.1"
   }
