--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,9 +15,12 @@
     "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
     "react-redux": "^9.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.5.0",
     "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0"
